# kaspersky-test-task

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
docs/: план и заметки.md  план.md
src/: celery_app.py  fastapi_app.py
src/config/: celery_app.py  container.py  settings.py
src/services/analyzer/api/: const.py  utils.py
src/services/analyzer/api/routers/: __init__.py  download_report.py  export_report.py  get_task_status.py
src/services/analyzer/app/: ports.py  tasks.py
src/services/analyzer/app/usecases/: __init__.py  generate_excel_report.py
src/services/analyzer/domain/: __init__.py  models.py  protocols.py
src/services/analyzer/domain/logic/: __init__.py  collector.py  lemmatizer.py  word_analyzer.py
src/services/analyzer/infra/readers/: __init__.py
src/services/analyzer/infra/readers/file/: __init__.py  reader.py
src/services/analyzer/infra/writers/: __init__.py
src/services/analyzer/infra/writers/xlsx/: writer.py
src/services/analyzer/tests/api/: conftest.py  test_download_report.py  test_export_report.py  test_get_task_status.py
src/services/analyzer/tests/app/usecases/: test_generate_excel_report.py
src/services/analyzer/tests/domain/logic/: test_collector.py  test_lemmatizer.py  test_word_analyzer.py
src/services/analyzer/tests/infra/readers/file/: test_reader.py
src/services/analyzer/tests/infra/writers/xlsx/: test_writer.py
