[project]
name = "kaspersky-test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymorphy3>=2.0.6",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
