[project]
name = "kaspersky-test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "celery>=5.6.2",
    "dependency-injector>=4.48.3",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymorphy3>=2.0.6",
    "python-multipart>=0.0.22",
    "redis>=7.3.0",
    "uvicorn>=0.41.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
